<resources>
    <string name="app_name">NetQuality</string>
    <!--菜单action-->
    <string name="action_test">测试</string>
    <string name="action_settings">设置</string>
    <string name="action_save">保存</string>
    <string name="action_history">历史</string>
    <string name="action_about">关于</string>
    <!--activity标题-->
    <string name="title_activity_his">历史记录</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_settings">设置</string>
    <string name="title_activity_his_detail">详情</string>
    <!--toast提示-->
    <string name="save_suc">保存成功</string>
    <string name="auto_save_suc">数据已自动保存</string>
    <string name="no_need_save">数据已自动保存</string>
    <string name="get_suc">数据收集完成</string>
    <!--关于页面文本-->
    <string name="about_name">网络质量数据采集终端</string>
    <string name="about_name_intro">在智能手机端采集用户智能手机基本信息与运营商网络质量</string>
    <string name="about_dev">开发者</string>
    <string name="about_dev_intro">郭笛、赵仲印、黄凌云、李奕鋆、林秋霞、邱媛、孙青煜、王旻昊</string>
    <string name="about_instruction_collect">采集功能</string>
    <string name="about_instruction_collect_intro">在主界面点击右下角的按钮即可完成数据采集</string>
    <string name="about_instruction_showHis">历史记录</string>
    <string name="about_instruction_showHis_intro">在主界面点击右上角菜单从中选择历史即可查看保存的历史记录，点击某条历史记录可以查看历史记录详情</string>
    <string name="about_instruction_autoSave">自动保存</string>
    <string name="about_instruction_autoSave_intro">在主界面点击右上角菜单从中选择设置可进入设置页面，在设置页面可以进行自动保存的相关设置，可以选择在数据采集完成后自动保存与自动保存后是否弹出对应提示</string>
    <string name="about_instruction_no">无法获取或不存在</string>
    <string name="about_instruction_no_intro">如果在信息获取时提示无法获取或不存在，则可能的原因是未联网无ip，网络连接中网络制式尚无法判断，手机为插卡无运营商等原因</string>
    <!--GitHub-->
    <string name="url_official_website">https://github.com/EAGzzyCSL/NetQuality</string>
</resources>
