<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ActivityAbout">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_about_bg" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/AboutText.Title"
                android:text="@string/about_name" />

            <TextView
                style="@style/AboutText.Content"
                android:text="@string/about_name_intro" />

            <TextView
                style="@style/AboutText.Title"
                android:text="@string/about_dev" />

            <TextView
                style="@style/AboutText.Content"
                android:text="@string/about_dev_intro" />

            <TextView
                style="@style/AboutText.Title"
                android:text="@string/about_instruction_collect" />

            <TextView
                style="@style/AboutText.Content"
                android:text="@string/about_instruction_collect_intro" />

            <TextView
                style="@style/AboutText.Title"
                android:text="@string/about_instruction_showHis" />

            <TextView
                style="@style/AboutText.Content"
                android:text="@string/about_instruction_showHis_intro" />

            <TextView
                style="@style/AboutText.Title"
                android:text="@string/about_instruction_autoSave" />

            <TextView
                style="@style/AboutText.Content"
                android:text="@string/about_instruction_autoSave_intro" />

            <TextView
                style="@style/AboutText.Title"
                android:text="@string/about_instruction_no" />

            <TextView
                style="@style/AboutText.Content"
                android:text="@string/about_instruction_no_intro" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <ImageView
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/fab_margin"
        android:background="@null"
        android:src="@drawable/icon_about_fab"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end" />

</android.support.design.widget.CoordinatorLayout>
